--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js" 
     integrity="sha256-qSIshlknROr4J8GMHRlW3fGKrPki733tLq+qeMCR05Q=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+    crossorigin="anonymous">
 </head>
 <body>
     <header role="banner">
         <h1>Asset Compare</h1> 
         <h4>Compare annual return of traditional equities vs. cryptoassets, in one chart</h4>
     </header>
-    <main>     
         <section class="asset">
             <form id="stock-form" >
                 <label for="search-term">Type a stock ticker</label>
@@ -29,22 +30,24 @@
             </form>
         </section>
         <p id="js-error-message" class="error-message"></p>
-        <section class="all-results">
-            <p class="line">Stocks</p>
-            <div id="stocks" class="hidden">
-                <ul id="stocks-results-list">
-                </ul>
+        <main role="results">
+            <section class="all-results">
+                <!-- <p class="line"><i class="fas fa-chart-line"></i> STOCKS</p> -->
+                <p class="line"><img src="c2.png">STOCKS</p>
+                <div id="stocks" class="hidden">
+                    <ul id="stocks-results-list">
+                    </ul>
+                </div>
+                <p class="line"><img src="s2.png">CRYPTO</p>
+                <div id="crypto" class="hidden">
+                    <ul id="crypto-results-list">
+                    </ul>
+                </div>
+            </section>
+            <div class= "d"> 
+                <canvas id= "myChart" width= "100" height= "100" aria-label="chart for assets"></canvas>
             </div>
-            <p class="line">Crypto</p>
-            <div id="crypto" class="hidden">
-                <ul id="crypto-results-list">
-                </ul>
-            </div>
-        </section>
-        <section class= "d"> 
-            <canvas id= "myChart" width= "100" height= "100" aria-label="chart for assets"></canvas>
-        </section>
-    </main>
+        </main>
     <script src="index.js"></script>
 </body>
 </html>
