major changes, updated API provider

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p class="appName">Asset Compare</p>
     </div>
     <header role="banner">
-        <h3>Compare annual return of any global stock vs. cryptoasset, in one chart</h3>
+        <h3>Check and compare market caps accross stocks and cryptoasset, in one chart</h3>
     </header>
         <section class="asset">
             <form id="asset-form">
