styles, light JS tweaks

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p class="appName">Asset Compare</p>
     </div>
     <header role="banner">
-        <h3>Check and compare market caps accross stocks and cryptoasset, in one chart</h3>
+        <h3>Check and compare market caps accross stocks and cryptoassets, in one chart</h3>
     </header>
         <section class="asset">
             <form id="asset-form">
@@ -40,9 +40,9 @@
         <main role="results">
             <section class="all-results">
                 <div class= "d"> 
-                    <canvas id= "myChart" width= "100" height= "100" aria-label="chart for assets"></canvas>
+                    <canvas id= "myChart"  aria-label="chart for assets"></canvas>
                 </div>
-                <div id="asset-list" class="hidden">
+                <div id="asset-list" class="hidden list">
                     <ul id="results-list">
                     </ul>
                 </div>
