minor updates, jQuery tweaks

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <canvas id= "myChart" aria-label="chart for assets"></canvas>
                 </div>
                 <div id="asset-list" class="hidden list">
-                    <ul id="results-list">
+                    <ul id="results-list" class="transition">
                     </ul>
                 </div>
             </section>
